test/visibility/rename/innerExcept.good
innerExcept.chpl:14: error: Bad identifier in rename, no known 'bar' in 'A'
